--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div class="container max-w-lg mx-6">
+  <h1>
+      Welcome to address-book-angular!
+  </h1>
   <form class="bg-white shadow-md w-full max-w-md px-8 pt-6 pb-8 mb-4">
     <h1>Create contact</h1>
     <div class="flex flex-wrap -mx-3 mb-6">
