hard coded contact details now replaced with information enterred into fields

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,6 +72,8 @@
       </form>
     </div>
     <pre>
+      <ng-container class="container" *ngFor="let contact of contacts">
         <app-contact></app-contact>
+      </ng-container>
     </pre>
 
