--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
-    Welcome to {{ title }}!
+    Welcome to the {{ title }}!
   </h1>
   <div class="container max-w-lg mx-6">
       <form class="bg-white shadow-md w-full max-w-md px-8 pt-6 pb-8 mb-4">
