--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,4 +2,6 @@
     text-align: center;
     padding: 20px;
     font-family: 'Times New Roman', Times, serif;
+    color: white;
+    background-color: black;
 }
